# rpg

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
src/: error.rs  main.rs  run.rs  share.rs
