[package]
name = "rpg-cli"
version = "0.1.0"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpg"
path = "src/main.rs"

[dependencies]
clap = "=3.0.0-beta.2"
percent-encoding = "2.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
