[package]
name = "rpg-cli"
description = "CLI tool for the Rust Playground."
version = "0.1.0"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/JohnTitor/rpg"
include = ["src/**/*", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpg"
path = "src/main.rs"

[dependencies]
clap = "=3.0.0-beta.2"
percent-encoding = "2.1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
