[package]
name = "rpg-cli"
description = "CLI tool for the Rust Playground."
version = "0.2.0"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/JohnTitor/rpg"
include = ["src/**/*", "LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rpg"
path = "src/main.rs"

[dependencies]
percent-encoding = "2.1"
pico-args = "0.4"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
